made changes to difficulty of AI

--- a/pong/Base.lproj/Main.storyboard
+++ b/pong/Base.lproj/Main.storyboard
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Uvf-Cm-w4l">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Uvf-Cm-w4l">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="LLPIXEL3.ttf">
+            <string>LLPixel</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="kTE-2A-u0Y">
             <objects>
                 <navigationController navigationBarHidden="YES" id="Uvf-Cm-w4l" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Hkp-P5-wav">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -23,7 +27,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hjC-Tc-xaY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1386" y="55"/>
+            <point key="canvasLocation" x="-2055" y="37"/>
         </scene>
         <!--Menu View Controller-->
         <scene sceneID="VWT-Ki-NjE">
@@ -37,46 +41,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvS-iQ-73t">
-                                <rect key="frame" x="156" y="97" width="63" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvS-iQ-73t">
+                                <rect key="frame" x="148.5" y="97" width="80" height="33"/>
+                                <fontDescription key="fontDescription" name="LLPixel" family="LLPixel" pointSize="17"/>
+                                <color key="tintColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="2 Players"/>
                                 <connections>
                                     <action selector="player2:" destination="Xnq-Ot-E3N" eventType="touchUpInside" id="zBW-cm-1jk"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81Y-c5-21J">
-                                <rect key="frame" x="171" y="219" width="33" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81Y-c5-21J">
+                                <rect key="frame" x="168.5" y="222" width="40" height="33"/>
+                                <fontDescription key="fontDescription" name="LLPixel" family="LLPixel" pointSize="17"/>
+                                <color key="tintColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="Easy"/>
                                 <connections>
                                     <action selector="easy:" destination="Xnq-Ot-E3N" eventType="touchUpInside" id="dNe-Qk-CSM"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tt7-Ke-e2y">
-                                <rect key="frame" x="160" y="286" width="55" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tt7-Ke-e2y">
+                                <rect key="frame" x="156.5" y="292" width="64" height="33"/>
+                                <fontDescription key="fontDescription" name="LLPixel" family="LLPixel" pointSize="17"/>
+                                <color key="tintColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="Medium"/>
                                 <connections>
                                     <action selector="medium:" destination="Xnq-Ot-E3N" eventType="touchUpInside" id="it9-F4-e19"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6n-tg-1gl">
-                                <rect key="frame" x="170" y="364" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6n-tg-1gl">
+                                <rect key="frame" x="165.5" y="373" width="43" height="33"/>
+                                <fontDescription key="fontDescription" name="LLPixel" family="LLPixel" pointSize="17"/>
+                                <color key="tintColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="Hard"/>
                                 <connections>
                                     <action selector="hard:" destination="Xnq-Ot-E3N" eventType="touchUpInside" id="XB8-KR-Sl4"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="81Y-c5-21J" firstAttribute="trailing" secondItem="l6n-tg-1gl" secondAttribute="trailing" id="499-I7-NEn"/>
+                            <constraint firstItem="QvS-iQ-73t" firstAttribute="top" secondItem="UFM-lL-iUc" secondAttribute="bottom" constant="77" id="6jk-mF-Hod"/>
+                            <constraint firstItem="QvS-iQ-73t" firstAttribute="centerX" secondItem="81Y-c5-21J" secondAttribute="centerX" id="7qH-oW-dsN"/>
+                            <constraint firstItem="l6n-tg-1gl" firstAttribute="centerX" secondItem="ENZ-68-FWw" secondAttribute="centerX" id="AX0-9N-b42"/>
+                            <constraint firstItem="81Y-c5-21J" firstAttribute="centerX" secondItem="tt7-Ke-e2y" secondAttribute="centerX" id="WEM-tb-RYZ"/>
+                            <constraint firstItem="l6n-tg-1gl" firstAttribute="top" secondItem="tt7-Ke-e2y" secondAttribute="bottom" constant="48" id="Z3t-2Z-kyN"/>
+                            <constraint firstItem="81Y-c5-21J" firstAttribute="top" secondItem="QvS-iQ-73t" secondAttribute="bottom" constant="92" id="cmD-2e-jaM"/>
+                            <constraint firstItem="tt7-Ke-e2y" firstAttribute="top" secondItem="81Y-c5-21J" secondAttribute="bottom" constant="37" id="mSk-eU-zWI"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="r9a-xp-Z8U"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n4a-Vz-QW7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-617" y="38"/>
+            <point key="canvasLocation" x="-1346" y="36"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -94,6 +112,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-620" y="36"/>
         </scene>
     </scenes>
 </document>
